Updated dependencies to match recent DS changes.